--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -26,7 +26,7 @@
                      </div>
                       
                      <div class="panorama-section tile-span-2"> 
-                        <h2>Quizs</h2>
+                        <h2>Quiz</h2>
                         <div class="tile-column-span-2">
                            <a class="tile widepeek" href="/home/quiz_two_pictures_menu">
                            	<div class="tile wide image">
@@ -51,7 +51,7 @@
     
                      <div class="panorama-section tile-span-2">
    
-                        <h2>Description d'images</h2>
+                        <h2>Descriptions d'images</h2>
                         <div class="tile-column-span-2">
                         	<a class="tile widepeek" href="/exercices/describe/very_easy">
                           
