--- a/app/views/exercices/categories_galleries/two_pictures.html.erb
+++ b/app/views/exercices/categories_galleries/two_pictures.html.erb
@@ -11,12 +11,16 @@
           <div class="span12 padding pagination-centered">
           	<% if @true_answer_number == 1 %>
           	 <%= image_tag @true_answer, :class => "true left size border" %>
-          	<% else %>
+          	<% elsif @answer =="white" %>
+          	<%= content_tag :span,"white",  :class => "false left size border white" %>
+          	 <% else%>
           	 <%= image_tag @answer,  :class => "false left size border"%>
           	<% end %>
           	
           	<% if @true_answer_number == 2 %>
           	 <%= image_tag @true_answer, :class => "true right size border" %>
+          	 <% elsif @answer =="white" %>
+          	<%= content_tag :span,"white",  :class => "false right size border white" %>
           	<% else %>
           	 <%= image_tag @answer,  :class => "false right size border"%>
           	<% end %>
