--- a/app/views/home/_panorama.html.erb
+++ b/app/views/home/_panorama.html.erb
@@ -1,7 +1,7 @@
 <%= link_to ({:controller => "home", :action => :select_category_gallery,   :exercice_controller => exercice_controller, :type => type, :number => number }), :class => "tile wide imagetext wideimage " do%>
              
 	 <%= image_tag asset_path image %>
-	 <%= content_tag :div, :class => "textover-wrapper bg-color-"+ COLOURS.sample do%>
+	 <%= content_tag :div, :class => "textover-wrapper bg-color-"+ COLORS.sample do%>
 
 	<div class="text2">
 		<%= name%>
