--- a/app/views/home/_panorama_gallery.html.erb
+++ b/app/views/home/_panorama_gallery.html.erb
@@ -2,7 +2,7 @@
                  :class => "tile square image" do%>
              
 	 <%= image_tag image, :class => "sqaremetro" %>
-	 <%= content_tag :div, :class => "textover-wrapper transparent bg-color-" +  COLOURS.sample do%>
+	 <%= content_tag :div, :class => "textover-wrapper transparent bg-color-" +  COLORS.sample do%>
 	<div class="text2">
 		<%= name.titleize %>
 	</div>
